<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_design"
        android:icon="@drawable/interior_design"
        android:title="@string/title_design" />

    <item
        android:id="@+id/navigation_vr"
        android:icon="@drawable/virtual_reality"
        android:title="@string/title_vr" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/man_user"
        android:title="@string/title_account" />
    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/contact_us"
        android:title="@string/title_contact" />

</menu>