<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.DecorationHomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/app_name"
        app:tabMode="fixed"
        app:tabMaxWidth="0dp"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        style="@style/TabLayoutStyle"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@android:color/black">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_living_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/living_area" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_bedroom_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bedroom_area" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_kitchen_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kitchen_area" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
